# agent-freebsd

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
src/agent/: agent_loop.rs  event.rs  mod.rs
src/llm/: anthropic.rs  client.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/mcp/: client.rs  mod.rs  transport.rs  types.rs
src/session/: mod.rs  storage.rs
src/tools/: mod.rs  registry.rs
src/tools/core/: bash.rs  edit.rs  glob_tool.rs  grep_tool.rs  mod.rs  read.rs  write.rs
src/tools/freebsd/: build.rs  dtrace.rs  jail.rs  mod.rs  pf.rs  pkg.rs  ports.rs  service.rs  sysctl.rs  version.rs  zfs.rs
src/tui/: app.rs  mod.rs
