[package]
name = "aibsd"
version = "0.1.0"
edition = "2024"
description = "FreeBSD-first CLI AI agent for programming and system administration"
authors = ["Dmitry <dmitry@aibsd.dev>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.28"
crossterm = "0.28"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
syntect = "5"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
async-trait = "0.1"
futures-util = "0.3"
glob = "0.3"
